[package]
name = "deduplication"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deduplication library to efficiently store data"
authors = ["Anirudha Kulkarni"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"